// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePanel Container Should render EditorSettings 1`] = `
<SidePanel
  dispatch={[Function]}
  sidePanelTab="EDITOR_SETTINGS"
  sidePanelWidth={350}
/>
`;

exports[`SidePanel Container Should render Leaderboard 1`] = `
<SidePanel
  dispatch={[Function]}
  sidePanelTab="LEADERBOARD"
  sidePanelWidth={350}
/>
`;

exports[`SidePanel Container Should render empty <div/> after sidePanel toggle off 1`] = `
<SidePanel
  dispatch={[Function]}
  sidePanelTab="NONE"
  sidePanelWidth={350}
/>
`;

exports[`SidePanel Container Should render empty <div/> initially 1`] = `
<SidePanel
  dispatch={[Function]}
  sidePanelTab="NONE"
  sidePanelWidth={350}
/>
`;
